Fixed a bug where the projects demos are not showing after clikcing links

--- a/src/style.css
+++ b/src/style.css
@@ -413,7 +413,7 @@ button:focus {
 }
 @media (max-width: 1092px) {
   .heading {
-    font-size: 1.2em !important;
+    font-size: 1.4em !important;
   }
 }
 
